--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.produtoapi</groupId>
-    <artifactId>produto-api-springboot</artifactId>
+    <artifactId>animais-api-springboot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
